// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentStatus component Should render well when the state is synced 1`] = `
Array [
  <span
    class="euiToolTipAnchor"
  >
    <div
      class="euiHealth euiHealth--textSizeS wz-flex"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            color="success"
            data-euiicon-type="dot"
          />
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
  </span>,
  <span
    class="hide-agent-status"
  >
    synced
  </span>,
]
`;

exports[`AgentStatus component should render well when the state is not synced 1`] = `
Array [
  <span
    class="euiToolTipAnchor"
  >
    <div
      class="euiHealth euiHealth--textSizeS wz-flex"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            color="subdued"
            data-euiicon-type="dot"
          />
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        />
      </div>
    </div>
  </span>,
  <span
    class="hide-agent-status"
  >
    not synced
  </span>,
]
`;
